src/app/components/workbench/workbench.component.scss
svg {
    z-index: 0;
    position: absolute;
    overflow: visible !important;
}

.bench {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.drawboard {
   
    position: absolute;
    top: 0;
    left: 0;
}

.grid {
    width: 100%;
    height: 100%;
    background-image: repeating-linear-gradient(#2b2c2c 0 1px, transparent 1px 100%),
        repeating-linear-gradient(90deg, #2b2c2c 0 1px, transparent 1px 100%);
    background-size: 50px 50px;
}

.zoom {
    position: absolute;
    right: 0;
    top: 0;
}

.select-zone {
    position: absolute;
    border: 1px dashed white;
    display: none;
}

